[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Lobby/LobbyMenu.gd" type="Script" id=1]

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 192.0
rect_min_size = Vector2( 320, 192 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_right = 310.0
margin_bottom = 20.0
mouse_filter = 1
text = "Change Icon, for example"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 310.0
margin_bottom = 44.0
mouse_filter = 1

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 310.0
margin_bottom = 68.0
mouse_filter = 1
[connection signal="mouse_entered" from="Panel/VBoxContainer" to="." method="_on_VBoxContainer_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer" to="." method="_on_VBoxContainer_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
